Downgrade to Java 8 (#1)