@@ -5,17 +5,19 @@ import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public interface BuildTool {
     URLClassLoader load();
     List<Path> findCompiledClassPaths();
 
     static BuildTool create(Path subProjectPath, Path rootProjectPath) {
-        try (var stream = Files.list(subProjectPath)) {
-            var fileNames = stream
+        try (Stream<Path> stream = Files.list(subProjectPath)) {
+            List<String> fileNames = stream
                     .filter(Files::isRegularFile)
                     .map(p -> p.getFileName().toString())
-                    .toList();
+                    .collect(Collectors.toList());
             if (fileNames.contains("pom.xml")) {
                 return new Maven(subProjectPath);
             } else if (fileNames.contains("build.gradle")) {
